<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/widget_min_width"
    android:layout_height="@dimen/widget_min_height">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_spacing"
            android:contentDescription="@string/match_date"
            android:text="@string/loading"
            android:textSize="@dimen/TeamNames" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/widget_spacing"
                android:contentDescription="@string/home_team_name"
                android:textSize="@dimen/TeamNames" />

            <TextView
                android:id="@+id/score_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/widget_spacing"
                android:contentDescription="@string/match_score"
                android:textSize="@dimen/TeamNames" />

            <TextView
                android:id="@+id/away_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/widget_spacing"
                android:contentDescription="@string/away_team_name"
                android:textSize="@dimen/TeamNames" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>